<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_background"
    android:layout_margin="20dp"
    android:padding="14dp"
    tools:context=".popup.PayOptionsPopup">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/pay_method"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/online"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/fisic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/cash_register"
        android:padding="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:foreground="@drawable/fisic"
        android:foregroundTint="@color/white"
        android:textColor="@color/white"
        android:gravity="bottom|center_horizontal"
        android:background="@drawable/pob_background"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/online"/>

    <Button
        android:id="@+id/online"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/online"
        android:padding="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        android:foreground="@drawable/online"
        android:foregroundTint="@color/white"
        android:gravity="bottom|center_horizontal"
        android:background="@drawable/pob_background"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/fisic"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>