<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="5dp"
        android:src="@drawable/image"
        android:background="#BFBFBF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/name"
        android:contentDescription="@string/product_photo" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum"
        android:textSize="20dp"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/quantity"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintEnd_toEndOf="@+id/line_1"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/line_1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="16dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintBottom_toTopOf="@id/price"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintEnd_toStartOf="@+id/remove"/>

    <TextView
        android:id="@+id/quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/quantity_placeholder"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textSize="20dp"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintEnd_toStartOf="@+id/price"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/price_placeholder"
        android:textSize="20dp"
        android:textAlignment="textEnd"
        android:layout_marginStart="5dp"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/quantity"
        app:layout_constraintEnd_toEndOf="@+id/line_1" />

    <Button
        android:id="@+id/remove"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:foreground="@drawable/delete"
        android:backgroundTint="@color/empty"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>